# hermes-trading

./: pyproject.toml
hermes_trading/: __init__.py  loop.py  reflect.py  run.py  score.py
hermes_trading/adapters/: macro.py  news.py  onchain.py  price.py
state/: goal.yaml
