[project]
name = "hermes-trading"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "ccxt>=4.2.0",
    "yfinance>=0.2.40",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
    "aiofiles>=23.2.1",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "rich>=13.7.0",
]

[project.scripts]
hermes-trading = "hermes_trading.run:main"
hermes-reflect = "hermes_trading.reflect:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
